:necktie: [Update]: Reservation Response 에 Category 정보도 포함할 수 있도록 변경함
