# src/common/interfaces/api/reservation/reservationResponse.interface.ts
@@ -1,17 +1,16 @@
 import { IMentorFeedbackResponse } from '../mentorFeedback/mentorFeedbackResponse.interface';
 import { IMenteeFeedbackResponse } from '../menteeFeedback/menteeFeedbackResponse.interface';
+import { ICategoryResponse } from '../category/categoryResponse.interface';
+import { IHashtagResponse } from '../hashtag/hashtagResponse.interface';
 
 export interface IReservationResponse {
   id: number;
   mentorId: number;
   menteeId: number;
-  categoryId: number;
+  category: ICategoryResponse;
   requestMessage: string;
   status: string;
-  hashtags: {
-    id: number;
-    name: string;
-  }[];
+  hashtags: IHashtagResponse[];
   mentorFeedback: IMentorFeedbackResponse;
   menteeFeedback: IMenteeFeedbackResponse;
   createdAt: Date;
